# nexus-core-devops-engineering

./: README.md
lesson1/nexuscore-day1/: .gitignore  Cargo.toml  README.md  lesson_article.md
lesson1/nexuscore-day1/bench/: README.txt
lesson1/nexuscore-day1/ebpf/: Makefile  tenant_latency.bpf.c
lesson1/nexuscore-day1/guest-component/: Cargo.toml
lesson1/nexuscore-day1/guest-component/src/: lib.rs
lesson1/nexuscore-day1/host/: Cargo.toml
lesson1/nexuscore-day1/host/src/: adapter.rs  main.rs  metrics.rs  pool.rs  tenant.rs  visualizer.rs
lesson1/nexuscore-day1/scripts/: bench.sh  cleanup.sh  demo.sh  load_ebpf.sh  migration_patterns.surql  start.sh  test.sh  verify.sh
lesson1/nexuscore-day1/viz/: index.html
lesson1/nexuscore-day1/wit/: surreal-adapter.wit
lesson10/nexuscore-day10/: .gitignore  Cargo.toml  Makefile  README.md  cleanup.sh
lesson10/nexuscore-day10/ebpf-xdp/: Makefile  projection_xdp.bpf.c  projection_xdp.h
lesson10/nexuscore-day10/loader/: Cargo.toml
lesson10/nexuscore-day10/loader/src/: main.rs
lesson10/nexuscore-day10/projection-engine/: Cargo.toml
lesson10/nexuscore-day10/projection-engine/src/: lib.rs
lesson10/nexuscore-day10/projection-engine/wit/: world.wit
lesson10/nexuscore-day10/scripts/: demo_metrics.py  quick-verify.sh  start.sh  stop.sh
lesson10/nexuscore-day10/stress/: go.mod  main.go
lesson10/nexuscore-day10/visualizer/: index.html
lesson15/nexuscore-semantic/: .gitignore  Cargo.toml  README.md  cleanup.sh
lesson15/nexuscore-semantic/data/: gen_tweets.py
lesson15/nexuscore-semantic/ebpf-ingester/: go.mod
lesson15/nexuscore-semantic/host-runtime/: Cargo.toml
lesson15/nexuscore-semantic/host-runtime/src/: main.rs
lesson15/nexuscore-semantic/scripts/: cleanup.sh  dashboard.sh  demo.sh  mock_host.py  start.sh  stress.sh  tcp_sink.py  verify.sh
lesson15/nexuscore-semantic/semantic-index/: Cargo.toml
lesson15/nexuscore-semantic/semantic-index/src/: lib.rs
lesson15/nexuscore-semantic/visualizer/: index.html
lesson15/nexuscore-semantic/wit/: world.wit
lesson2/nexuscore-graph/: .gitignore  Cargo.toml  cleanup.sh
lesson2/nexuscore-graph/bpf/: go.mod  hot_edge.bpf.c  hot_edge_loader.go
lesson2/nexuscore-graph/scripts/: demo.sh  start.sh  verify.sh
lesson2/nexuscore-graph/src/: csr_graph.rs  main.rs
lesson2/nexuscore-graph/tests/: integration_test.rs
lesson2/nexuscore-graph/web/: index.html
lesson2/nexuscore-graph/wit/: edges.wit
lesson20/nexuscore-cdc-day20/: .gitignore  Makefile  README.md  build_lesson20.py  cleanup.sh  requirements.txt
lesson20/nexuscore-cdc-day20/cdc-component/: Cargo.toml  build.rs
lesson20/nexuscore-cdc-day20/cdc-component/c-shims/: memcmp.c
lesson20/nexuscore-cdc-day20/cdc-component/src/: bindings.rs  lib.rs
lesson20/nexuscore-cdc-day20/cdc-component/wit/: cdc-processor.wit
lesson20/nexuscore-cdc-day20/infra/: visualizer.html
lesson20/nexuscore-cdc-day20/loader/: go.mod  go.sum
lesson20/nexuscore-cdc-day20/scripts/: start.sh  stop.sh  stress_test.sh  test.sh  verify.sh
lesson25/nexuscore-day25/: .gitignore  Cargo.toml  README.md  cleanup.sh  requirements.txt
lesson25/nexuscore-day25/config/: nexuscore.toml
lesson25/nexuscore-day25/crates/nexuscore-classifier-wit/: nexuscore-classifier.wit
lesson25/nexuscore-day25/crates/nexuscore-dashboard/: Cargo.toml
lesson25/nexuscore-day25/crates/nexuscore-dashboard/src/: main.rs
lesson25/nexuscore-day25/crates/nexuscore-host/: Cargo.toml
lesson25/nexuscore-day25/crates/nexuscore-host/src/: classifier.rs  main.rs  metrics.rs  simulator.rs
lesson25/nexuscore-day25/crates/tenant-classifier-default/: Cargo.toml
lesson25/nexuscore-day25/crates/tenant-classifier-default/src/: lib.rs
lesson25/nexuscore-day25/ebpf/: Makefile
lesson25/nexuscore-day25/ebpf/src/: nexuscore_ts.bpf.c
lesson25/nexuscore-day25/scripts/: cleanup.sh  demo.sh  start.sh  stop.sh  verify.sh
lesson25/nexuscore-day25/test-data/: sample_events.json
lesson3/nexuscore-day3/: .gitignore  Cargo.toml  README.md  materialize_day3.py
lesson3/nexuscore-day3/data/: visualizer.html
lesson3/nexuscore-day3/scripts/: cleanup.sh  demo.sh  gen_graph.py  start.sh  stress.sh  verify.sh
lesson3/nexuscore-day3/src/host/: Cargo.toml
lesson3/nexuscore-day3/src/host/src/: main.rs
lesson3/nexuscore-day3/wit/: nexuscore-graph.wit
lesson30/nexuscore-rag-day30/: .gitignore  Cargo.toml  README.md  cleanup_environment.sh  requirements.txt
lesson30/nexuscore-rag-day30/data/: corpus.jsonl
lesson30/nexuscore-rag-day30/ebpf/: rag_loader.c  rag_probe.bpf.c
lesson30/nexuscore-rag-day30/loadtest/: go.mod  main.go
lesson30/nexuscore-rag-day30/nexuscore-host/: Cargo.toml
lesson30/nexuscore-rag-day30/nexuscore-host/src/: main.rs
lesson30/nexuscore-rag-day30/rag-component/: Cargo.toml
lesson30/nexuscore-rag-day30/rag-component/src/: lib.rs
lesson30/nexuscore-rag-day30/scripts/: cleanup_build.sh  demo.sh  gen_corpus.py  loadtest.sh  start.sh  stop.sh  test.sh  verify.sh
lesson35/nexuscore-day35/: .gitignore  Cargo.toml  README.md  requirements.txt
lesson35/nexuscore-day35/agent-component/: Cargo.toml
lesson35/nexuscore-day35/agent-component/src/: bindings.rs  lib.rs
lesson35/nexuscore-day35/agent-component/wit/: agent.wit
lesson35/nexuscore-day35/host/: Cargo.toml
lesson35/nexuscore-day35/host/src/: main.rs
lesson35/nexuscore-day35/scripts/: _paths.sh  cleanup.sh  demo.sh  http_post_body.py  loadtest.sh  mock_llm_server.py  mock_search_server.py  run_tests.sh  start.sh  verify.sh
lesson35/nexuscore-day35/visualizer/: index.html
lesson4/nexuscore-day4/: .gitignore
lesson4/nexuscore-day4/ebpf/: Makefile
lesson4/nexuscore-day4/wasi-component/: Cargo.toml
lesson4/nexuscore-day4/wasi-component/src/: lib.rs
lesson4/nexuscore-day4/wasi-component/wit/: nexuscore.wit
lesson5/nexuscore-day5/: .gitignore  Cargo.toml  Makefile
lesson5/nexuscore-day5/dashboard/: Cargo.toml
lesson5/nexuscore-day5/dashboard/src/: main.rs  web.rs
lesson5/nexuscore-day5/load-gen/: Cargo.toml
lesson5/nexuscore-day5/load-gen/src/: main.rs
(+36 files in other folders)
