[workspace]
resolver = "2"
members  = ["host", "guest-component"]

[workspace.dependencies]
wasmtime          = { version = "25", features = ["component-model", "async"] }
wasmtime-wasi     = { version = "25" }
surrealdb         = { version = "2", features = ["kv-mem"] }
tokio             = { version = "1", features = ["full"] }
bb8               = "0.8"
ciborium          = "0.2"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow            = "1"
async-trait       = "0.1"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
clap              = { version = "4", features = ["derive", "env"] }
prometheus        = "0.13"
axum              = "0.7"
tower-http        = { version = "0.5", features = ["cors"] }
url               = "2"
