[package]
name    = "nexuscore-graph"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "nexuscore-host"
path = "src/main.rs"

[lib]
name    = "nexuscore_graph"
crate-type = ["cdylib", "rlib"]
path    = "src/lib.rs"

[features]
default       = []
wasm-component = ["wit-bindgen"]

[dependencies]
wit-bindgen     = { version = "0.26", optional = true, default-features = false, features = ["realloc"] }
anyhow          = "1.0"
rand            = { version = "0.8", features = ["small_rng"] }
indicatif       = "0.17"
console         = "0.15"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"

[profile.wasm-release]
inherits  = "release"
opt-level = "z"
