[workspace]
members = ["host"]
exclude = ["agent-component"]
resolver = "2"

# `nexuscore-agent` is built from `agent-component/` with `cargo component build --release`
# (Wasm target). Excluding it avoids compiling the Wasmtime host for wasm32 when using a
# unified workspace target (e.g. `CARGO_BUILD_TARGET=wasm32-wasip2`).

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
