[package]
name    = "nexuscore-host"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime          = { workspace = true }
wasmtime-wasi     = { workspace = true }
surrealdb         = { workspace = true }
tokio             = { workspace = true }
bb8               = { workspace = true }
ciborium          = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow            = { workspace = true }
async-trait       = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
clap              = { workspace = true }
prometheus        = { workspace = true }
axum              = { workspace = true }
tower-http        = { workspace = true }
url               = { workspace = true }

[build-dependencies]
wit-bindgen = "0.25"
