[package]
name    = "nexus-loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus-loader"
path = "src/main.rs"

[dependencies]
anyhow           = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
libbpf-rs        = { workspace = true }
flatbuffers      = { workspace = true }
serde            = { workspace = true }
serde_json       = "1"
clap             = { version = "4", features = ["derive"] }
nix              = { version = "0.29", default-features = false, features = ["net"] }
