[package]
name    = "projection-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen       = { version = "0.36", default-features = false, features = ["realloc"] }
flatbuffers       = { workspace = true }
serde             = { workspace = true }
serde_json        = "1"

[profile.release]
opt-level = "s"
lto       = true
