[package]
name = "host-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime         = { version = "25", features = ["component-model", "async", "cranelift"] }
wasmtime-wasi    = { version = "25" }
wasmtime-wasi-nn = { version = "25" }
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
anyhow           = "1"
dashmap          = "6"
