[package]
name = "nexuscore-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexuscore-host"
path = "src/main.rs"

[dependencies]
# Wasmtime 25+ with component model + WASI P3
wasmtime = { version = "25.0", features = ["component-model", "async"] }
wasmtime-wasi = { version = "25.0" }
# Async runtime — single-threaded to prove cooperative scheduling
tokio = { version = "1", features = ["rt", "macros", "time", "sync", "io-util"] }
# Memory-mapped file I/O for corpus
memmap2 = "0.9"
# Structured logging with latency percentiles
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Fast non-cryptographic hash for tenant ID lookup
rustc-hash = "2.0"
# Byte serialization for embedding vectors
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
