[package]
name = "nexuscore-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexuscore"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "22", features = ["component-model", "async"] }
wasmtime-wasi = { version = "22" }
wasmtime-wasi-http = "22"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
prometheus = "0.13"
axum = { version = "0.7", features = ["tokio"] }
http = "1"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
