[package]
name    = "nexuscore-tenant-component"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.28", default-features = false, features = ["macros", "realloc"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = "symbols"
panic         = "abort"
