[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dashboard"
path = "src/main.rs"

[[bin]]
name = "dashboard-web"
path = "src/web.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
