[package]
name = "load-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "load-gen"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-uring = "0.5"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hdrhistogram = "7.5"
libc = "0.2"
