[package]
name    = "nexuscore-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexuscore"
path = "src/main.rs"

[dependencies]
tokio          = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
bytes          = { workspace = true }
wasmtime       = { workspace = true }
wasmtime-wasi  = { workspace = true }
crossbeam      = { workspace = true }
parking_lot    = { workspace = true }
metrics        = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
libc = "0.2"
