[package]
name = "nexuscore-host"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "nexuscore-host"
path = "src/main.rs"

[dependencies]
axum = "0.7"
nexuscore-graph = { path = "../nexuscore_graph" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
